EESSIPEN-306 Date picker popper z-index fix

--- a/src/components/ui/DatePicker/DatePicker.less
+++ b/src/components/ui/DatePicker/DatePicker.less
@@ -1,5 +1,9 @@
 @import '../../../constants';
 
+.react-datepicker-popper {
+  z-index: 2 !important:
+}
+
 .highContrast .c-ui-datePicker {
   input {
     background: @black;
